--- a/ha_config_fry/configuration.yaml
+++ b/ha_config_fry/configuration.yaml
@@ -26,44 +26,84 @@ lovelace:
     type: module
 
 feeding_plc:
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 1
     pool_plc_index: 1
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 2
     pool_plc_index: 2
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 3
     pool_plc_index: 3
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 4
     pool_plc_index: 4
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 5
     pool_plc_index: 5
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 6
     pool_plc_index: 6
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 7
     pool_plc_index: 7
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 8
     pool_plc_index: 8
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 9
     pool_plc_index: 9
     fry: true
-  - host: 192.168.14.18
+  - host: 192.168.14.17
     number: 10
+    pool_plc_index: 10
+    fry: true
+  - host: 192.168.14.18
+    number: 11
+    pool_plc_index: 1
+    fry: true
+  - host: 192.168.14.18
+    number: 12
+    pool_plc_index: 2
+    fry: true
+  - host: 192.168.14.18
+    number: 13
+    pool_plc_index: 3
+    fry: true
+  - host: 192.168.14.18
+    number: 14
+    pool_plc_index: 4
+    fry: true
+  - host: 192.168.14.18
+    number: 15
+    pool_plc_index: 5
+    fry: true
+  - host: 192.168.14.18
+    number: 16
+    pool_plc_index: 6
+    fry: true
+  - host: 192.168.14.18
+    number: 17
+    pool_plc_index: 7
+    fry: true
+  - host: 192.168.14.18
+    number: 18
+    pool_plc_index: 8
+    fry: true
+  - host: 192.168.14.18
+    number: 19
+    pool_plc_index: 9
+    fry: true
+  - host: 192.168.14.18
+    number: 20
     pool_plc_index: 10
     fry: true
 
@@ -74,6 +114,7 @@ pools_plc:
   - host: 192.168.14.18
     number: 2
     fry: true
+    extra_sensors: true
 
 recorder:
   exclude:
