--- a/ha_config/ui-lovelace.yaml
+++ b/ha_config/ui-lovelace.yaml
@@ -14,6 +14,7 @@ views:
   - !include lovelace/tab_feeding_1_20.yaml
   - !include lovelace/tab_feeding_51_70.yaml
   - !include lovelace/tab_temp_oxy.yaml
+  - !include lovelace/tab_sensors.yaml
   - !include lovelace/tab_pool_1.yaml
   - !include lovelace/tab_pool_2.yaml
   - !include lovelace/tab_pool_3.yaml
