--- a/ha_config_fry/ui-lovelace.yaml
+++ b/ha_config_fry/ui-lovelace.yaml
@@ -12,6 +12,7 @@ views:
   - !include lovelace/tab_pools_1_20.yaml
   - !include lovelace/tab_feeding_1_20.yaml
   - !include lovelace/tab_temp_oxy.yaml
+  - !include lovelace/tab_sensors.yaml
   - !include lovelace/tab_pool_1.yaml
   - !include lovelace/tab_pool_2.yaml
   - !include lovelace/tab_pool_3.yaml
